package com.skuu.design.factory.cxgc;

/**
 * 2. 抽象产品B - 浏览器
 */
public interface Browser {
    void open();

    void close();

    String getName();
}
